versioned_docs/version-8.5/reference/contact.md
---
id: contact
title: Contact
description: Contact Camunda, submit feedback, find support using the Camunda community forum, note bug reports and feature requests, and review security notices.
keywords:
  [
    support,
    contact-us,
    get-support,
    help,
    need-help,
    bug,
    bug-report,
    feature-request,
    issue,
    enterprise-support,
  ]
---

Get support for Camunda or send us your feedback via the following channels.

<table className="table-callout">
<tr>
<td>[Support](https://camunda.com/services/enterprise-support-guide/)</td>
<td><p><ul><li>Request support via the [Enterprise support process](https://camunda.com/services/enterprise-support-guide/).</li><li><p>Find support options in the Help Center or [Camunda community forum](https://forum.camunda.io/).</p></li></ul></p></td>
</tr>
<tr>
<td>[Bugs](https://forum.camunda.io/)</td>
<td><p><ul><li>Send us your bug reports via a support ticket (Enterprise customers) or via the [Camunda community forum](https://forum.camunda.io/).</li><li><p>Review our technical bug trackers at [github.com/camunda/camunda/issues](https://github.com/camunda/camunda/issues) or the [quality board](https://github.com/orgs/camunda/projects/187/views/5).</p></li></ul></p></td>
</tr>
<tr>
<td width="20%"><p>[Community](https://forum.camunda.io/)</p></td>
<td><p><ul><li>Participate in our community via the [Camunda community forum](https://forum.camunda.io/), where you can exchange ideas with other Camunda users and Camunda employees.</li><li><p>For all other Camunda community programs and resources, visit the [Camunda Developer Hub](https://camunda.com/developers).</p></li></ul></p></td>
</tr>
<tr>
<td>[Feature requests](https://roadmap.camunda.com/c/236-how-to-submit-a-feature-request)</td>
<td><p><ul><li>Submit a feature request in the [Product Roadmap Portal](https://roadmap.camunda.com/c/236-how-to-submit-a-feature-request).</li><li><p>[Open an issue](https://github.com/camunda/camunda/issues) for smaller, technical enhancement requests.</p></li></ul></p></td>
</tr>
<tr>
<td>[Sales/other](https://camunda.com/contact/)</td>
<td>[Contact us](https://camunda.com/contact/) with sales inquiries, information about Camunda 8 performance and benchmarking, or any other queries not covered by the other channels.</td>
</tr>
<tr>
<td>[Security issues](/reference/notices.md)</td>
<td><p>For security-related issues, see [security notices](/reference/notices.md) for current information on known issues and how to report a vulnerability so we can solve the problem as quickly as possible.</p><p><strong>Note:</strong> Do not use GitHub for security-related issues.</p></td>
</tr>
</table>

## Locating Camunda 8 credentials

Need assistance locating your Camunda 8 credentials? You can obtain these credentials from Camunda by submitting a **Help Request**. To do this, take the following steps:

1. Log in to [Jira](https://jira.camunda.com/secure/Dashboard.jspa).
2. Click **Create** in the navigation bar at the top of the page. This launches a **Create Issue** pop-up.
3. In the **Issue Type** field, select **Help Request**.
4. In the **Help Request Type** field, click the option that reads **I need the credentials for downloading Camunda**.
5. In the **Summary** and **Description** fields, **I need the credentials for downloading Camunda** will populate by default.
   ![completed help request example](./img/create-issue-request.png)
6. (Optional) Add more details, such as the priority level or authorized support contacts.
7. Click **Create** at the bottom of the pop-up **Create Issue** box.

After completing these steps, your request is generated. Find additional details on submitting a self-service help request [here](https://camunda.com/services/enterprise-support-guide/).
